@@ -15,11 +15,14 @@ sub add_methods {
 		my ($planner, $dir, $dist_name) = @_;
 		$dist_name //= $planner->distribution;
 
+		my $inner = $planner->new_scope;
+		$inner->load_module("Dist::Build::Core");
+
 		my @outputs;
 		find(sub {
 			return unless -f;
 			my $output = catfile(qw/blib lib auto share dist/, $dist_name, abs2rel($File::Find::name, $dir));
-			$planner->copy_file(abs2rel($File::Find::name), $output);
+			$inner->copy_file(abs2rel($File::Find::name), $output);
 			push @outputs, $output;
 		}, $dir);
 
@@ -31,11 +34,14 @@ sub add_methods {
 		$module_name //= $planner->main_module;
 		(my $module_dir = $module_name) =~ s/::/-/g;
 
+		my $inner = $planner->new_scope;
+		$inner->load_module("Dist::Build::Core");
+
 		my @outputs;
 		find(sub {
 			return unless -f;
 			my $output = catfile(qw/blib lib auto share module/, $module_dir, abs2rel($File::Find::name, $dir));
-			$planner->copy_file(abs2rel($File::Find::name), $output);
+			$inner->copy_file(abs2rel($File::Find::name), $output);
 			push @outputs, $output;
 		}, $dir);
 
