@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Don't expose Dist::Build::Core to main planner
           - Document core delegates
 
 0.016     2024-10-06 18:04:02+02:00 Europe/Brussels
